--- a/react2/src/App.css
+++ b/react2/src/App.css
@@ -8,3 +8,18 @@ body{
   margin-top: 100px;
   
 }
+.todoField{
+  display: flex;
+  align-items: center;
+}
+.todoField .todoField__btn{
+  color: #fff;
+  background-color: coral;
+  border: 0;
+  height: 35px;
+}
+.todoField .todoField__input{
+  height: 35px;
+  padding: 0 10px;
+  border: 0;
+}
