--- a/react2/src/App.css
+++ b/react2/src/App.css
@@ -16,13 +16,42 @@ body{
   color: #fff;
   background-color: coral;
   border: 0;
+  border-radius: 10px;
+  margin: 10px;
   height: 35px;
+  font-size: 20px;
+  cursor: pointer;
 }
 .todoField .todoField__input{
   height: 35px;
   padding: 0 10px;
   border: 0;
+  font-size: 22px;
+  border-radius: 10px;
   outline: 0;
   background-color: black;
   color: white;
 } 
+
+
+
+.todos{
+  list-style-type: none;
+  padding: 0;
+}
+.todos .todos__item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.todos .todos__text{
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.todos .todos__buttons a{
+  margin-left: 10px;
+  text-decoration: none;
+  cursor: pointer;
+}
