--- a/react2/src/App.css
+++ b/react2/src/App.css
@@ -50,8 +50,13 @@ body{
   text-transform: uppercase;
   font-size: 14px;
 }
-.todos .todos__buttons a{
+.todos .todos__text.todos__text--done{
+  text-decoration: line-through;
+}
+.todos .todos__buttons button{
   margin-left: 10px;
   text-decoration: none;
   cursor: pointer;
+  background-color: transparent;
+  border: 0;
 }
